--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,8 @@ jobs:
           # The GITHUB_TOKEN is automatically created by Actions and is required for the action
           # to integrate with your repository (e.g., for reporting).
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
+      - name: Run Semgrep scan
+        uses: semgrep/semgrep-action@v2
+        with:
+          config: "p/default"
