--- a/.semgrep/rules/dax-in-config.yml
+++ b/.semgrep/rules/dax-in-config.yml
@@ -3,7 +3,8 @@ rules:
     pattern-regex: '"(expression|formula|dax)":\s*"[^"]*(\+|CONCATENATE|&)[^"]*"'
     message: "Dynamic DAX expression found in configuration - potential injection risk"
     severity: ERROR
-    languages: [json]
+    languages: 
+      - json
     metadata:
       category: security
       technology:
@@ -13,10 +14,13 @@ rules:
     pattern-regex: '"(expression|formula|dax)":\s*"[^"]*\$\{[^}]*\}[^"]*"'
     message: "User input interpolation in DAX expression"
     severity: ERROR
-    languages: [json]
+    languages: 
+      - json
 
   - id: rls-bypass-in-config
     pattern-regex: '"(expression|formula|dax)":\s*"[^"]*(USERNAME|USERPRINCIPALNAME)\(\)[^"]*=\s*[^"]*"'
     message: "Potential RLS bypass in configuration DAX"
     severity: ERROR
-    languages: [json, xml]
+    languages: 
+      - json
+      - xml
