--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,4 @@ jobs:
         with:
           name: semgrep-results
           path: findings.json
-          retension-days: 1
+          retention-days: 1
